
* Adding new timing report
  - This reports provides the average time taken to complete each stage of each phase of a
    questionnaire

* Adding further handling of participants who require sourcing
  - New conditions "sourcing required" and "unreachable" have been added to participant status
  - Participants who have no active phone numbers are included in the "sourcing required" queue

* Quotas can now be defined by site as well as region

====================================================================================================
1.1.8
====================================================================================================

* Scheduled calls
  - In the participant's details a new "Scheduled Call" list has been added
  - Added new category to queue similar to appointments
  - Participants are held in "waiting" queue until scheduled call time arrives at which point they
    are assigned in priority after appointments

* Cognitive Rescoring
  - Minor changes due to requirement changes

====================================================================================================
1.1.7
====================================================================================================

* Supervisors now have full list/view/add/delete access to operator away times
  - existing away times user, start and end times can be changed
  - new away times can be added to users with operator access to the supervisor's site
  - away times must always have no operator activity between the start/end times

* Adding caching ability to select reports
  - cached reports are generated overnight to save processing and wait time

* Changing participant status report to have new "Breakdown by" and "Province" options
  - breakdown includes old "site or province" options and the new "quota" option
  - breaking down by quota organizes the report into quota categories (gender & age group)