@@ -1,1 +1,2 @@
 DELETE FROM operation WHERE subject = "demographics" AND name = "report";
+DELETE FROM operation WHERE subject = "sourcing_required" AND name = "report";
