@@ -1,6 +1,9 @@
 DELETE FROM role_has_operation WHERE operation_id IN (
   SELECT id FROM operation WHERE subject = "demographics" AND name = "report"
 );
+DELETE FROM role_has_operation WHERE operation_id IN (
+  SELECT id FROM operation WHERE subject = "sourcing_required" AND name = "report"
+);
 
 INSERT IGNORE INTO role_has_operation
 SET role_id = ( SELECT id FROM role WHERE name = "administrator" ),
