@@ -11,6 +11,7 @@
 * Adding further handling of participants who require sourcing
   - New conditions "sourcing required" and "unreachable" have been added to participant status
   - Participants who have no active phone numbers are included in the "sourcing required" queue
+  - Removing old/defunct sourcing required report
 
 * Quotas can now be defined by site as well as region
 
